--- a/registration.html
+++ b/registration.html
@@ -43,13 +43,13 @@
           <div class="input-group-prepend">
             <span class="input-group-text">*</span>
           </div>
-          <input type="text" id='password' class="form-control" placeholder="Password">
+          <input type="password" id='password' class="form-control" placeholder="Password">
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text">*</span>
           </div>
-          <input type="text" id='confirmpassword' class="form-control" placeholder="ConfirmPassword">
+          <input type="password" id='confirmpassword' class="form-control" placeholder="ConfirmPassword">
         </div>
         <button type="button" id="saveButton"class="btn btn-outline-danger">Save</button>
       </div>
@@ -67,7 +67,7 @@
       if(password == confirmpassword) {
         axios.post(
           `http://localhost:3300/api/user`,
-          {firstname, lastname, email, password}
+          {firstname: firstname, lastname: lastname, email: email, password: password}
         )
         .then(response=>{
           if(response.data.success) {
