--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/login.css">
-  <link rel="stylesheet" href="assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-  <script src="assets/jQuery/jquery.js"></script>
-  <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/library/bootstrap/css/bootstrap.min.css">
+  <script src="assets/library/jQuery/jquery.js"></script>
+  <script src="assets/library/bootstrap/js/bootstrap.min.js"></script>
   <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
 </head>
 <body>
@@ -37,30 +37,7 @@
       </div>
     </div>
   </div>  
-  <script src="./assets/axios/axios.js"></script>
-  <script>
-    var socket = io('http://localhost:3030');
-    document.getElementById('loginButton').addEventListener('click', function () {
-      var email = document.getElementById('email').value;
-      var password = document.getElementById('password').value;
-      if(!email&&!password) {
-        alert('Input the data correctly!');
-      }
-      else{
-        axios.get(
-          `http://localhost:3300/api/user/${email}`,
-        )
-        .then(response=>{
-          if(response.data.success) {
-            if(response.data.record.password == password) {
-              location.href = './playersselect.html?email='+email;
-            }
-            else alert('Input password correctly!');           
-          }
-          else alert("Input Email correctly");
-        })
-      }              
-    })
-  </script>
+  <script src="./assets/library/axios/axios.js"></script>
+  <script src="./assets/js/login.js"></script>
 </body>
 </html>
