--- a/registration.html
+++ b/registration.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/registration.css">
-  <link rel="stylesheet" href="assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-  <script src="assets/jQuery/jquery.js"></script>
-  <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/library/bootstrap/css/bootstrap.min.css">
+  <script src="assets/library/jQuery/jquery.js"></script>
+  <script src="assets/library/bootstrap/js/bootstrap.min.js"></script>
   <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
 </head>
 <body>
@@ -55,28 +55,7 @@
       </div>
     </div>
   </div>  
-  <script src="./assets/axios/axios.js"></script>
-  <script>
-
-    document.getElementById('saveButton').addEventListener('click', function () {
-      var email = document.getElementById('email').value;
-      var password = document.getElementById('password').value;
-      var firstname = document.getElementById('firstname').value;
-      var lastname = document.getElementById('lastname').value;
-      var confirmpassword = document.getElementById('confirmpassword').value;
-      if(password == confirmpassword) {
-        axios.post(
-          `http://localhost:3300/api/user`,
-          {firstname: firstname, lastname: lastname, email: email, password: password}
-        )
-        .then(response=>{
-          if(response.data.success) {
-            alert('Success Save!');
-          }
-        })          
-      }      
-    })
-
-  </script>
+  <script src="./assets/library/axios/axios.js"></script>
+  <script src="./assets/js/registration.js"></script>
 </body>
 </html>
